Praveen Maurya Single Page Webpage

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div class="container-white">
     <h2>My hash table</h2>
-    <p>{Sport:Cricket, Believe-in:Good Karma, It matters!, Movies:Bollywood, Hollywood:[Cast away, Apocalypto, Godfather], Things_before_you_die_list: Go to Moon someday, Quote:"Life is a roller-coaster, you will laugh, you will scream on the way till it comes to an end, so enjoy the ride".}</p>
+    <p>{ Sport:"Cricket", Believe-in:"Good Karma, It matters!", Movies:"Bollywood", Hollywood:[Cast away, Apocalypto, Godfather], Things_before_you_die_list:"Go to Moon someday", Quote:"Life is a roller-coaster, you will laugh, you will scream on the way till it comes to an end, so enjoy the ride".}</p>
   </div>
 
   <div class="container-white">
